<resources>
    <string name="app_name">ILIVE</string>
    <string name="csst_adddevice">添加设备</string>
    <string name="csst_addroom">添加房间</string>
    <string name="menu_addmodel">添加模式</string>
    <string name="menu_addhouse">添加场景</string>
    <string name="csst_devicemanager">中控管理</string>
    <string name="csst_Videomonitoring">视频监控</string>
    <string name="csst_TimingSettings">安防报警</string>
    <string name="csst_midcenterset">中控配置</string>
    <string name="csst_runmanager">运行管理</string>
    <string name="csst_datain">数据导入</string>
    <string name="csst_dataout">数据导出</string>
    <string name="csst_wendu">温度</string>
    <string name="csst_shidu">湿度</string>
    <string name="csst_wendu_param">℃</string>
    <string name="csst_wendu_paramsample">0 ℃</string>
    <string name="csst_shidu_param">%</string>
    <string name="csst_shidu_paramsample">00RH%</string>
    <string name="csst_shidu_rh">RH</string>
    <string name="csst_please_input_floorname">请输入场景名</string>
    <string name="csst_floorname_not_null">场景名不能为空</string>
    <string name="csst_floorname_repeat">%1$s 场景已存在</string>
    <string name="csst_del_floor_message">删除%1$s将会同时删除该场景下的房间及设备数据！</string>
    <string name="csst_del_model_message">删除%1$s将会同时删除该场景下的动作数据！</string>
    <string name="csst_add_room_empty_floor">请添加场景，没有依赖的场景。</string>
    <string name="csst_same_room_message">该场景下存在相同的房间名字！</string>
    <string name="csst_adddevice_empty_room">请添加房间，没有依赖的房间！</string>
    <string name="csst_please_input_roomname">请输入房间名</string>
    <string name="csst_roomname_not_null">房间名不能为空</string>
    <string name="csst_roomname_repeat">房间已存在</string>
    <string name="csst_net_config_ssid">WIFI</string>
    <string name="csst_net_config_pawd">密码</string>
    <string name="csst_net_config_show_pass">显示密码</string>
    <string name="csst_net_config">配置</string>
    <string name="csst_net_wifi_disEnabled">WIFI未打开</string>
    <string name="csst_net_search_device">寻找设备,大概需要35S，请耐心等待！...</string>
    <string name="csst_net_para_empty">WIFI或密码为空</string>
    <string name="csst_net_config_fail">配置失败</string>
    <string name="csst_net_config_sus">配置成功</string>
    <string name="csst_net_config_find">发现设备</string>
    <string name="csst_net_config_unfind">未发现设备</string>
    <string name="csst_send_cmd_success">命令发送成功。</string>
    <string name="csst_send_cmd_fail">命令发送失败。</string>
    <string name="csst_add_camera">请按此添加摄像机</string>
    <string name="csst_add_camera_title">添加摄像机</string>
    <string name="csst_modify_camera_title">修改摄像机</string>
    <string name="csst_camera_name">相机名</string>
    <string name="csst_camera_id">设备ID</string>
    <string name="csst_camera_user">用户名</string>
    <string name="csst_camera_pawd">密码</string>
    <string name="csst_camera_name_hint">摄像机名称</string>
    <string name="csst_camera_id_hint">摄像机UUID</string>
    <string name="csst_camera_user_hint">请输入用户名</string>
    <string name="csst_camera_pawd_hint">请输入密码</string>
    <string name="csst_camera_defuser">admin</string>
    <string name="csst_camera_name_empty">摄像机名字不能为空</string>
    <string name="csst_camera_uuid_empty">UUID不能为空</string>
    <string name="csst_camera_user_empty">用户名不能为空</string>
    <string name="csst_camera_pswd_empty">密码不能为空</string>
    <string name="csst_camera_name_exists">摄像机名字已经存在</string>
    <string name="csst_camera_uuid_exists">摄像机已经存在</string>
    <string name="csst_camera_search_message">正在搜索摄像机，请稍后...</string>
    <string name="csst_camera_search_empty">没有发现摄像机设备,请重试...</string>
    <string name="csst_camera_search_result">搜索结果</string>
    <string name="csst_camera_refresh">刷新</string>
    <string name="connecting">正在连接...</string>
    <string name="pppp_status_disconnect">断线</string>
    <string name="videoing">录像中...</string>
    <string name="exit_show">   提示：</string>
    <string name="exit_play_show">确认退出播放?</string>
    <string name="eixt_show_toast">本地录像中，请先停止再退出！</string>
    <string name="connected">已连接</string>
    <string name="pwd_no_empty">密码不能为空</string>
    <string name="password">密码:</string>
    <string name="showpwd">显示密码</string>
	<string name="setting_camera">摄像机设置</string>
	<string name="setting_wifi">Wifi设置</string>
	<string name="setting_user">用户设置</string>
	<string name="setting_ftp">Ftp设置</string>
	<string name="setting_alerm">报警设置</string>
	<string name="setting_time">设备时钟设置</string>
	<string name="setting_mail">邮件设置</string>
	<string name="setting_sdcard">SD卡设置</string>
	<string name="datetime_setting">时间设置</string>
	<string name="mail_setting">邮件设置</string>
	<string name="ftp_setting">Ftp设置</string>
	<string name="alerm_setting">报警设置</string>
    <string name="wifi">Wifi</string>
	<string name="wifi_checkmode">验证类型:</string>
	<string name="wifi_manager">管理WiFi网络</string>
	<string name="wifi_signal_strong">信号强度:</string>
	<string name="wifi_safe">安全性:</string>
	<string name="wifi_no_safe">无</string>
	<string name="wifi_set_failed">WiFi设置失败</string>
	<string name="wifi_set_success">WiFi设置成功,摄像机正在重启...</string>
	<string name="wifi_not_connected">未连接</string>
	<string name="wifi_scanning">WiFi正在扫描,请稍候...</string>
	<string name="wifi_scan_failed">WiFi扫描失败</string>
	<string name="wifi_getparams">正在获取WiFi信息...</string>
	<string name="wifi_getparams_failed">获取WiFi信息失败</string>
	<string name="wifi_notchange">WiFi没有更改,不需要设置</string>
	<string name="wifi_pwd_toolong">密码不能超过128位</string>
	<string name="user_admin">管理员</string>
	<string name="user_operator">操作者</string>
	<string name="user_visitor">参观者</string>
	<string name="user_setting">用户设置</string>
	<string name="user_set_failed">用户设置失败</string>
	<string name="user_set_success">用户设置成功,摄像机正在重启</string>
	<string name="user_name_no_empty">用户名不能为空</string>
	<string name="user_name">用户名:</string>
	<string name="user_getparams">正在获取用户信息...</string>
	<string name="user_getparams_failed">获取用户信息失败</string>
	<string name="user_name_toolong">用户名不能超过64位</string>
	<string name="user_pwd_toolong">密码不能超过64位</string>
	<string name="alerm_detector_layout">移动侦测布防</string>
	<string name="alerm_detector_sensitivity">移动侦测灵敏度</string>
	<string name="alerm_sensitivity_desc">(数值越小越灵敏)</string>
	<string name="alerm_io_layout">报警输入布防</string>
	<string name="alerm_trigger_level">触发电平</string>
	<string name="alerm_presetsit">报警时预置位联动</string>
	<string name="alerm_io_move">报警后 IO 联动</string>
	<string name="alerm_ioout_level">输出电平</string>
	<string name="alerm_mail_inform">报警后邮件通知</string>
	<string name="alerm_upload_picture">报警后上传图片</string>
	<string name="alerm_upload_picture_time_interval"> 上传图片时间间隔(秒)</string>
	<string name="alerm_trigger_event">报警触发事件</string>
	<string name="alerm_set_failed">报警设置失败</string>
	<string name="alerm_ioin_levelhight">高电平</string>
	<string name="alerm_ioin_levellow">低电平</string>
	<string name="alerm_getparams">正在获取报警信息...</string>
	<string name="alerm_getparams_failed">获取报警信息失败</string>
	<string name="alerm_preset_no">无</string>
	<string name="alerm_uploadinterval_toolong">上传时间不能超过3600秒</string>
	<string name="alerm_uploadpic_prompt">0或空表示不上传图片</string>
	<string name="alerm_log">报警日志</string>
	<string name="default_alerm_motion_alarm">移动侦测报警</string>
	<string name="default_alerm_gpio_alarm">IO联动报警</string>
	<string name="alerm_no_log">无报警日志</string>
	<string name="alerm_record">报警后录像</string>
	<string name="date_device_time">设备时钟时间</string>
	<string name="date_device_timezone">设备时区设定</string>
	<string name="date_ntp_server_auto_check">使用 NTP服务器自动校时</string>
	<string name="date_phone_time_auto_check">使用手机时间校准设备时钟</string>
	<string name="date_ntp_server">NTP服务器</string>
	<string name="date_middle_island">(GMT-11:00)中途岛,萨摩亚群岛</string>
	<string name="date_hawaii">(GMT -10:00) 夏威夷</string>
	<string name="date_alaska">(GMT-09:00)阿拉斯加</string>
	<string name="date_pacific_time">(GMT-08:00)太平洋时间(美国和加拿大)</string>
	<string name="date_mountain_time">(GMT-07:00)山地时间(美国和加拿大)</string>
	<string name="date_middle_part_time">(GMT-06:00)中部时间(美国和加拿大),墨西哥城</string>
	<string name="date_eastern_time">(GMT-05:00)东部时间(美国和加拿大),利马,波哥大</string>
	<string name="date_ocean_time">(GMT-04:00)大西洋时间(加拿大),圣地亚哥,拉巴斯</string>
	<string name="date_newfoundland">(GMT-03:30)纽芬兰</string>
	<string name="date_brasilia">(GMT-03:00)巴西利亚,布宜若斯艾丽斯,乔治敦</string>
	<string name="date_center_ocean">(GMT-02:00)中大西洋</string>
	<string name="date_cape_verde_island">(GMT-01:00)佛得角群岛</string>
	<string name="date_greenwich">(GMT)格林威治平时,伦敦,里斯本,卡萨布兰卡</string>
	<string name="date_brussels">(GMT+01:00)布鲁赛尔,巴黎,柏林,罗马,马德里,斯多哥尔摩, 贝尔格莱德, 布拉格
	</string>
	<string name="date_athens">(GMT +02:00) 雅典, 耶路撒冷, 开罗, 赫尔辛基</string>
	<string name="date_nairobi">(GMT +03:00) 内罗毕, 利雅得, 莫斯科</string>
	<string name="date_teheran">(GMT +03:30) 德黑兰</string>
	<string name="date_baku">(GMT +04:00) 巴库, 第比利斯, 阿布扎比, 马斯科特</string>
	<string name="date_kebuer">(GMT +04:30) 科布尔</string>
	<string name="date_islamabad">(GMT +05:00) 伊斯兰堡, 卡拉奇, 塔森干</string>
	<string name="date_calcutta">(GMT +05:30) 加尔各答, 孟买, 马德拉斯, 新德里</string>
	<string name="date_alamotu">(GMT +06:00) 阿拉木图, 新西伯利亚, 阿斯塔南, 达尔</string>
	<string name="date_bangkok">(GMT +07:00) 曼谷, 河内, 雅加达</string>
	<string name="date_beijing">(GMT +08:00) 北京, 新加坡, 台北</string>
	<string name="date_seoul">(GMT +09:00) 首尔, 雅库茨克, 东京</string>
	<string name="date_darwin">(GMT +09:30) 达尔文</string>
	<string name="date_guam">(GMT +10:00) 关岛, 墨尔本, 悉尼, 莫尔兹比港, 符拉迪沃斯托克</string>
	<string name="date_suolumen">(GMT +11:00)马加丹,所罗门群岛, 新喀里多尼亚</string>
	<string name="date_auckland">(GMT +12:00) 奥克兰, 惠灵顿, 斐济</string>
	<string name="date_ntp_server_time_nist_gov">time.nist.gov</string>
	<string name="date_ntp_server_time_kriss_re_kr">time.kriss.re.kr</string>
	<string name="date_ntp_server_time_windows_com">time.windows.com</string>
	<string name="date_ntp_server_time_nuri_net">time.nuri.net</string>
	<string name="date_setting_success">设备时钟时间设置成功</string>
	<string name="date_setting_failed">设备时钟时间设置失败</string>
   	<string name="csst_delete">删除</string>
   	<string name="csst_update">修改</string>
   	<string name="csst_back">返回</string>
	<string name="csst_done">完成</string>
    <string name="csst_rc_0">0</string>
	<string name="csst_rc_1">1</string>
	<string name="csst_rc_2">2</string>
	<string name="csst_rc_3">3</string>
	<string name="csst_rc_4">4</string>
	<string name="csst_rc_5">5</string>
	<string name="csst_rc_6">6</string>
	<string name="csst_rc_7">7</string>
	<string name="csst_rc_8">8</string>
	<string name="csst_rc_9">9</string>
    <string name="csst_airconditionrc_high_key">升温</string>
    <string name="csst_airconditionrc_low_key">降温</string>
    <string name="csst_airconditionrc_speed_key">风速</string>
    <string name="csst_airconditionrc_cold_key">制冷</string>
    <string name="csst_airconditionrc_warm_key">制热</string>
    <string name="csst_airconditionrc_updown_key">上下扫风</string>
    <string name="csst_airconditionrc_leftright_key">左右扫风</string>
    <string name="csst_dvdrc_delete_key">删除</string>
    <string name="csst_dvdrc_ok_key">确定</string>
	<string name="csst_model_edit">编辑</string>
	<string name="csst_model_clockopen">开启模式</string>
	<string name="csst_model_cancel">取消</string>
	<string name="csst_model_delete">删除</string>
   <string name="csst_rc_table_tcl">TCL</string>
   <string name="csst_rc_table_meide">美的</string>
   <string name="csst_rc_table_xinfei">新飞</string>
   <string name="csst_rc_table_hansen">海信</string>
   <string name="csst_rc_table_haier">海尔</string>
   <string name="csst_rc_table_xiaotianer">小天鹅</string>
   <string name="csst_rc_table_meiling">美菱</string>
   <string name="csst_rc_table_tozhi">东芝</string>
   <string name="csst_rc_table_geli">格力</string>
   <string name="csst_rc_table_kangjia">康佳</string>
   <string name="csst_rc_table_chuangwei">创维</string>
   <string name="csst_rc_table_sony">索尼</string>
   <string name="csst_rc_table_songxia">松下</string>
   <string name="csst_rc_table_sunsung">三星</string>
   <string name="csst_rc_table_LG">LG</string>
   <string name="csst_rc_table_title">安防设置</string>
</resources>