<?xml version="1.0" encoding="utf-8"?>
<!-- 	
	添加情景模式界面
 -->
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addModelcontent"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/currentbackground"
    >
	<!-- 标题栏 -->
	<RelativeLayout 
	android:id="@+id/layout_top"
	android:layout_width="fill_parent"
    android:layout_height="50.0dip"
    android:gravity="center_vertical"
    android:background="@color/currenttitle"
     >
	<!-- 返回 -->
	<Button 
	    android:id="@+id/mBtnrctableCancel"
	    android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
		android:background="@color/btntitlebackground"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/csst_back"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_size" />
	<!-- 标题 -->
    <TextView
        android:id="@+id/mTVrctableTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10.0dip"
        android:shadowColor="@color/color_shadow"
        android:shadowDx="1.0"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        android:text="@string/csst_rc_table_title"
        android:textColor="@color/white"
        android:textSize="18.0sp"
        android:textStyle="bold" />
    <!-- 完成 -->
    <Button
        android:id="@+id/mBtnrctableDone"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
		android:background="@color/btntitlebackground"
        android:text="@string/csst_done"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="@dimen/round_btn_textsize" />
</RelativeLayout>
 <TableLayout
  android:id="@+id/table4"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:stretchColumns="*"
  android:padding="3dip"
  >
  <TableRow>
      <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctableTCL"
       android:text="@string/csst_rc_table_tcl"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
       <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctablemeidi"
       android:text="@string/csst_rc_table_meide"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
     <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctablexinfei"
       android:text="@string/csst_rc_table_xinfei"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
  </TableRow>
   <TableRow>
      <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctablehaisen"
       android:text="@string/csst_rc_table_hansen"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
       <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctablehaier"
       android:text="@string/csst_rc_table_haier"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
     <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctablexiaotianer"
       android:text="@string/csst_rc_table_xiaotianer"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
  </TableRow>
   <TableRow>
      <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctablemeiling"
       android:text="@string/csst_rc_table_meiling"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
       <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctabletozhi"
       android:text="@string/csst_rc_table_tozhi"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
     <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctablegeli"
       android:text="@string/csst_rc_table_geli"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
  </TableRow>
   <TableRow>
      <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctablesongxia"
       android:text="@string/csst_rc_table_songxia"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
       <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctableLG"
       android:text="@string/csst_rc_table_LG"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
     <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctablesony"
       android:text="@string/csst_rc_table_sony"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
  </TableRow>
   <TableRow>
      <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctablekangjia"
       android:text="@string/csst_rc_table_kangjia"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
       <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctablechuagwei"
       android:text="@string/csst_rc_table_chuangwei"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
     <Button
       android:layout_width="wrap_content"
       android:layout_height="@dimen/rc_table_hight"
       android:id="@+id/btnrctablesunsung"
       android:text="@string/csst_rc_table_sunsung"
       android:textSize="@dimen/round_btn_textsize"
       android:textStyle="bold"
       android:background="@color/whitesmoke"
       android:layout_margin="@dimen/rc_table_margin"
    ></Button>
  </TableRow>
  
 </TableLayout>
	 
    
</LinearLayout>
