<?xml version="1.0" encoding="utf-8"?>
<!-- 空调 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <!-- 电源 -->
    <Button
        android:id="@+id/mBtnPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/csst_tv_power_btn_bg" />
    <!-- 升温 -->
    <Button
        android:id="@+id/mBtnAddt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dip"
        android:background="@drawable/csst_tv_btn_def_bg"
        android:text="@string/csst_airconditionrc_high_key"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <!-- 降温 -->
    <Button
        android:id="@+id/mBtnDelt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dip"
        android:background="@drawable/csst_tv_btn_def_bg"
        android:text="@string/csst_airconditionrc_low_key"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <!-- 风速 -->
    <Button
        android:id="@+id/mBtnWind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/csst_tv_btn_def_bg"
        android:text="@string/csst_airconditionrc_speed_key"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >
        <!-- 制冷 -->
        <Button
            android:id="@+id/mBtnCold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/csst_tv_btn_def_bg"
            android:text="@string/csst_airconditionrc_cold_key"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <!-- 制热 -->
        <Button
            android:id="@+id/mBtnHot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/csst_tv_btn_def_bg"
            android:text="@string/csst_airconditionrc_warm_key"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <!-- 上下扫风 -->
        <Button
            android:id="@+id/mBtnTBWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/csst_tv_btn_def_bg"
            android:text="@string/csst_airconditionrc_updown_key"
            android:textColor="@color/white" />
        <!-- 左右扫风 -->
        <Button
            android:id="@+id/mBtnLRWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/csst_tv_btn_def_bg"
            android:text="@string/csst_airconditionrc_leftright_key"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>