<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/csst_floor"/>
    <EditText
        android:id="@+id/et_roomname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:hint="@string/csst_please_input_roomname" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_update_room"
            android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="50dp" 
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:text="@string/csst_update"
            android:background="@drawable/csst_button_black"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_delete_room"
           android:layout_width="0dp"
            android:layout_weight="1.0"
            android:layout_height="50dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:text="@string/csst_delete" 
            android:background="@drawable/csst_button_black"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>